src/test/ui/parser/doc-before-eof.rs
// compile-flags: -Z parse-only

/// hi //~ERROR expected item after doc comment
